# bdpod

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-update.yml
src/: main.rs  schema.graphql
src/app_config/: mod.rs
src/cynic_queries/: mod.rs
src/graphql/: access_token.graphql  access_token.rs  mod.rs  query_api_version.graphql  query_api_version.rs  schema.graphql
