[package]
name = "bdpod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.1"
url = "*"
flexi_logger = "0.22.3"
log = "0.4"
futures = "0.3"
graphql_client = "0.10"
serde = "^1.0"
reqwest = { version = "^0.11", features = ["json", "blocking"] }